--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <title>Site Academico</title>
-    <header>
-    <h1>-Informações acadêmicas-</h1>
-     <hr>
-    </header>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site Acadêmico Pessoal</title>
 </head>
 <body>
-    <H2>Descrição sobre minha pessoa:</H2>
-    <p>Opa, meu nome é <strong>Joaquim de Souza Diniz</strong>, sou de Cantagalo e estou no ensino médio com o curso tecnico integrado no cefet-nf.Eu não possuo muitas expectativas para depois da escola, e inclusive prefiro não pensar muito sobre isso.</p>
+    <header>
+        <h1>Apresentação</h1>
+    </header>
     <hr>
-
-    <h2>-Informações das disciplinas-</h2>
-    <p>Abaixo segue as informações sobre as disciplinas que são ensinadas no primeiro ano e no curso tecnico de informatica no cefet-nf:</p>
-    <br>
-    <h3>Disciplinas do ensino médio:</h3>
-    <ul>
-        <li><a href="./normal/Biologia.html">Biologia</a></li>
-        <br>
-        <li><a href="./normal/Quimica.html">Química</a></li>
-    </ul>
-    <h3>Disciplinas do curso técnico:</h3>
-    <ul>
-        <li><a href="./curso tecnico/Algoritmo.html">Algoritmo</a></li>
-        <br>
-        <li><a href="./curso tecnico/Informatica_basica.html">Informatica basica</a></li>
-        <br>
-        <li><a href="./curso tecnico/Desing_web.html">Desing web</a></li>
-    </ul>
+    <main>
+        <section>
+            <h2>Sobre mim</h2>
+            <p>Olá, meu nome é Christine Cordeiro, tenho 15 anos e estudo no CEFET, curso informática.</p>
+            <p>Eu gosto muito de dormir, adoro chocolate, meu passatempo favorito é desenhar.</p>
+            <p>Futuramente, quero estar em uma faculdade bacana, ter um gato preto e ganhar dinheiro.</p>
+        </section>
+        <hr>
+        <article>
+            <h2>Disciplinas</h2>
+            <p>Abaixo seguem informações sobre algumas disciplinas escolares, contando sobre elas, sobre os professores e fotos.</p>
+            <ul>
+                <li><a href="../medio/biologia.html"><em>Biologia</em></a></li>
+                <li><a href="../medio/quimica.html"><em>Química</em></a></li>
+                <li><a href="../tecnico/design_web.html"><em>Design Web</em></a></li>
+                <li><a href="../tecnico/algoritmo.html"><em>Algoritmo</em></a></li>
+                <li><a href="../tecnico/info_basica.html"><em>Informática Básica</em></a></li>
+            </ul>
+        </article>
+    </main>
 </body>
 </html>
