--- a/3-trimestre/Classes/classes.html
+++ b/3-trimestre/Classes/classes.html
@@ -307,7 +307,7 @@
 
           const turma = new TurmaOnline("Matemática", "http://turmaonline.com/matematica");
           turma.adicionarAluno("Alice");
-          turma.adicionarAluno("Bruno");
+          turma.adicionarAluno("Christine");
           turma.removerAluno("Alice");
           console.log(turma.listarAlunos());
 
